--- a/Index.html
+++ b/Index.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <h1 class="bar">Hello <b>CSS</b></h1>
+        <h2>Hello GitHub</h2>
         <span>bold, italic, underlined</span><br><br>
     </body>
 </html>
