--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Index</title>
+        <title>Branch</title>
         <link href="Style.css" rel="stylesheet" type="text/css">       
     </head>
     <body>
